--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.0.0-rc.6
+@version      3.0.0-rc.7
 @license      MIT
 @preprocessor stylus
 
@@ -245,11 +245,15 @@ OM = next_omsg
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 3.0.0-rc.6 — August 18th, 2020'
-        --message: 'The v3 is almost here! Updated to `v2.2033.7` of ' + \
-                   'WhatsApp. Delaying the full-release until next week ' + \
-                   'or the week after – see the changelog for more info. '
-        --changes: '\A\A https://github.com/vednoc/dark-whatsapp'
+        --version: 'Dark-WhatsApp 3.0.0-rc.7 — August 27th, 2020'
+        --message: 'The v3 is almost here! Updated to `v2.2035.12` of ' + \
+                   'WhatsApp. \A\A I began working on an alternative to ' + \
+                   'userstyles.org called userstyles.world. It is in very ' + \
+                   'early stages, but I decided to spread the word to hear ' + \
+                   'about what people think – see the changelog for more info. '
+        --changes: '\A\A Visit the site at: https://userstyles.world' + \
+                   '\A\A https://github.com/vednoc/dark-whatsapp' + \
+                   '\A\A P.S. CSS can not add links, only fake/pseudo text.'
 
         /// UI font.
         --ui-font: ui_font, Segoe UI, Helvetica Neue, Helvetica, Lucida Grande,
