--- a/wa.user.styl
+++ b/wa.user.styl
@@ -115,6 +115,13 @@
 @var color    white      'Color: White                ' #ffffff
 @var color    sh         'Color: Shadow light         ' #00000025
 @var color    sh-h       'Color: Shadow heavy         ' #00000035
+
+@var color    _red       'Color: Red                  ' #dc322f
+@var color    _green     'Color: Green                ' #859900
+@var color    _yellow    'Color: Yellow               ' #e5c512
+@var color    _blue      'Color: Blue                 ' #268bd2
+@var color    _violet    'Color: Violet               ' #6c71c4
+@var color    _cyan      'Color: Cyan                 ' #2aa198
 ==/UserStyle== */
 
 // Color mixin.
@@ -227,6 +234,54 @@ OM = next_omsg
             '0':        OM,
             '1': darken(OM, og_quote),
         },
+        b1: {
+            '0': mix(darken(BG,  0%), _red, 0%)
+            '1': mix(darken(BG, 20%), _red, a1)
+            '2': mix(darken(BG, 20%), _red, a2)
+            '3': mix(darken(BG, 20%), _red, a3)
+            '4': mix(darken(BG, 40%), _red, a4)
+            '5': mix(darken(BG, 40%), _red, a5)
+        },
+        b2: {
+            '0': mix(darken(BG,  0%), _green, 0%)
+            '1': mix(darken(BG, 20%), _green, a1)
+            '2': mix(darken(BG, 20%), _green, a2)
+            '3': mix(darken(BG, 20%), _green, a3)
+            '4': mix(darken(BG, 40%), _green, a4)
+            '5': mix(darken(BG, 40%), _green, a5)
+        },
+        b3: {
+            '0': mix(darken(BG,  0%), _yellow, 0%)
+            '1': mix(darken(BG, 20%), _yellow, a1)
+            '2': mix(darken(BG, 20%), _yellow, a2)
+            '3': mix(darken(BG, 20%), _yellow, a3)
+            '4': mix(darken(BG, 40%), _yellow, a4)
+            '5': mix(darken(BG, 40%), _yellow, a5)
+        },
+        b4: {
+            '0': mix(darken(BG,  0%), _blue, 0%)
+            '1': mix(darken(BG, 20%), _blue, a1)
+            '2': mix(darken(BG, 20%), _blue, a2)
+            '3': mix(darken(BG, 20%), _blue, a3)
+            '4': mix(darken(BG, 40%), _blue, a4)
+            '5': mix(darken(BG, 40%), _blue, a5)
+        },
+        b5: {
+            '0': mix(darken(BG,  0%), _violet, 0%)
+            '1': mix(darken(BG, 20%), _violet, a1)
+            '2': mix(darken(BG, 20%), _violet, a2)
+            '3': mix(darken(BG, 20%), _violet, a3)
+            '4': mix(darken(BG, 40%), _violet, a4)
+            '5': mix(darken(BG, 40%), _violet, a5)
+        },
+        b6: {
+            '0': mix(darken(BG,  0%), _cyan, 0%)
+            '1': mix(darken(BG, 20%), _cyan, a1)
+            '2': mix(darken(BG, 20%), _cyan, a2)
+            '3': mix(darken(BG, 20%), _cyan, a3)
+            '4': mix(darken(BG, 40%), _cyan, a4)
+            '5': mix(darken(BG, 40%), _cyan, a5)
+        }
     }
 
     /// Generate Stylus-lang variables.
@@ -235,11 +290,23 @@ OM = next_omsg
     define('ac-' + key, val, g) for key, val in C.ac
     define('og-' + key, val, g) for key, val in C.og
     define('ig-' + key, val, g) for key, val in C.ig
+    define('b1-' + key, val, g) for key, val in C.b1
+    define('b2-' + key, val, g) for key, val in C.b2
+    define('b3-' + key, val, g) for key, val in C.b3
+    define('b4-' + key, val, g) for key, val in C.b4
+    define('b5-' + key, val, g) for key, val in C.b5
+    define('b6-' + key, val, g) for key, val in C.b6
 
     /// Generate Stylus-lang helpers for CSS variables.
     define('bg' + key, s('var(--bg-%s)', unquote(key)), g) for key, val in C.bg
     define('fg' + key, s('var(--fg-%s)', unquote(key)), g) for key, val in C.fg
     define('ac' + key, s('var(--ac-%s)', unquote(key)), g) for key, val in C.ac
+    define('b1' + key, s('var(--b1-%s)', unquote(key)), g) for key, val in C.b1
+    define('b2' + key, s('var(--b2-%s)', unquote(key)), g) for key, val in C.b2
+    define('b3' + key, s('var(--b3-%s)', unquote(key)), g) for key, val in C.b3
+    define('b4' + key, s('var(--b4-%s)', unquote(key)), g) for key, val in C.b4
+    define('b5' + key, s('var(--b5-%s)', unquote(key)), g) for key, val in C.b5
+    define('b6' + key, s('var(--b6-%s)', unquote(key)), g) for key, val in C.b6
 }
 
 @-moz-document domain('web.whatsapp.com') {
@@ -346,14 +413,14 @@ OM = next_omsg
         --attach-media-drop-border-rgb: var(--fg-3-rgb) //241,241,242;
         --attach-media-drop-overlay: var(--bg-2) //#383d3f4d;
         --attach-media-drop-overlay-rgb: var(--bg-2-rgb) //55.76,60.6,63.24;
-        --audio-progress-incoming: var(--green) //#3bb463;
-        --audio-progress-incoming-rgb: var(--green-rgb) //59,180,99;
+        --audio-progress-incoming: var(--b2-0) //#3bb463;
+        --audio-progress-incoming-rgb: var(--b2-0-rgb) //59,180,99;
         --audio-progress-outgoing: var(--ac-2) //#5f8884;
         --audio-progress-outgoing-rgb: var(--ac-2-rgb) //95,136,132;
-        --audio-progress-played-incoming: var(--blue) //#5ba0c3;
-        --audio-progress-played-incoming-rgb: var(--blue-rgb) //91,160,195;
-        --audio-progress-played-outgoing: var(--blue) //#55a5c5;
-        --audio-progress-played-outgoing-rgb: var(--blue-rgb) //85,165,197;
+        --audio-progress-played-incoming: var(--b4-0) //#5ba0c3;
+        --audio-progress-played-incoming-rgb: var(--b4-0-rgb) //91,160,195;
+        --audio-progress-played-outgoing: var(--b4-0) //#55a5c5;
+        --audio-progress-played-outgoing-rgb: var(--b4-0-rgb) //85,165,197;
         --audio-track-incoming: var(--fg-4) //#374248;
         --audio-track-incoming-rgb: var(--fg-4-rgb) //55,66,72;
         --audio-track-outgoing: var(--fg-4) //#1d5852;
@@ -388,34 +455,34 @@ OM = next_omsg
         --bubble-meta-rgb: var(--fg-3-rgb) //241,241,242;
         --bubble-meta-icon: var(--fg-3) //#f1f1f299;
         --bubble-meta-icon-rgb: var(--fg-3-rgb) //241,241,242;
-        --butterbar-battery-background: mix(BG, red, 70%) //#e05b52;
-        --butterbar-battery-background-rgb: to_rgb(mix(BG, red, 70%)) //224,91,82;
-        --butterbar-battery-icon: var(--red) //#f5d6d7;
-        --butterbar-battery-icon-rgb: var(--red-rgb) //245,214,215;
+        --butterbar-battery-background: var(--b1-4) //#e05b52;
+        --butterbar-battery-background-rgb: var(--b1-4-rgb) //224,91,82;
+        --butterbar-battery-icon: var(--b1-0) //#f5d6d7;
+        --butterbar-battery-icon-rgb: var(--b1-0-rgb) //245,214,215;
         --butterbar-battery-primary: var(--fg-0) //#f1f1f2f5;
         --butterbar-battery-primary-rgb: var(--fg-0-rgb) //241,241,242;
         --butterbar-battery-secondary: var(--fg-4) //#f1f1f2cc;
         --butterbar-battery-secondary-rgb: var(--fg-4-rgb) //241,241,242;
-        --butterbar-connection-background: mix(BG, yellow, 75%) //#febc2c;
-        --butterbar-connection-background-rgb: to_rgb(mix(BG, yellow, 75%)) //254,188,44;
+        --butterbar-connection-background: var(--b3-4) //#febc2c;
+        --butterbar-connection-background-rgb: var(--b3-4-rgb) //254,188,44;
         --butterbar-connection-primary: var(--fg-0) //#1c282ff5;
         --butterbar-connection-primary-rgb: var(--fg-0-rgb) //28,40,47;
         --butterbar-connection-secondary: var(--fg-4) //#1c282fd9;
         --butterbar-connection-secondary-rgb: var(--fg-4-rgb) //28,40,47;
-        --butterbar-default-background: mix(BG, blue, 70%) //#39c;
-        --butterbar-default-background-rgb: to_rgb(mix(BG, blue, 70%)) //51,153,204;
-        --butterbar-icon: var(--bg-2) //#f1f1f2cc;
-        --butterbar-icon-rgb: var(--bg-2-rgb) //241,241,242;
-        --butterbar-notification-icon: var(--blue) //#8eb2be;
-        --butterbar-notification-icon-rgb: var(--blue-rgb) //142,178,190;
+        --butterbar-default-background: var(--b4-3) //#39c;
+        --butterbar-default-background-rgb: var(--b4-3) //51,153,204;
+        --butterbar-icon: var(--b3-2) //#f1f1f2cc;
+        --butterbar-icon-rgb: var(--b3-2-rgb) //241,241,242;
+        --butterbar-notification-icon: var(--b4-0) //#8eb2be;
+        --butterbar-notification-icon-rgb: var(--b4-0-rgb) //142,178,190;
         --butterbar-primary: var(--fg-0) //#f1f1f2f5;
         --butterbar-primary-rgb: var(--fg-0-rgb) //241,241,242;
         --butterbar-secondary: var(--fg-4) //#f1f1f2d9;
         --butterbar-secondary-rgb: var(--fg-4-rgb) //241,241,242;
-        --butterbar-update-background: var(--ac-0) //#00af9c;
-        --butterbar-update-background-rgb: var(--ac-0-rgb) //0,175,156;
-        --butterbar-update-icon: var(--green) //#8eafaa;
-        --butterbar-update-icon-rgb: var(--green-rgb) //142,175,170;
+        --butterbar-update-background: var(--b2-4) //#00af9c;
+        --butterbar-update-background-rgb: var(--b2-4-rgb) //0,175,156;
+        --butterbar-update-icon: var(--b2-0) //#8eafaa;
+        --butterbar-update-icon-rgb: var(--b2-0-rgb) //142,175,170;
         --button-alternative: var(--ac-1) //#68bbe4;
         --button-alternative-rgb: var(--ac-1-rgb) //104,187,228;
         --button-alternative-background: var(--bg-3) //#222e35;
@@ -486,8 +553,8 @@ OM = next_omsg
         --conversation-panel-background-rgb: var(--bg-1-rgb) //11.29231,20.46731,25.40769;
         --conversation-panel-border: var(--bg-5) //#f1f1f214;
         --conversation-panel-border-rgb: var(--fg-3-rgb) //241,241,242;
-        --danger: var(--red) //#ef697a;
-        --danger-rgb: var(--red-rgb) //239,105,122;
+        --danger: var(--b1-0) //#ef697a;
+        --danger-rgb: var(--b1-0-rgb) //239,105,122;
         --drawer-background: var(--bg-1) //#101d24;
         --drawer-background-rgb: var(--bg-1-rgb) //16,29,36;
         --drawer-background-deep: var(--bg-0) //#080e12;
@@ -563,7 +630,7 @@ OM = next_omsg
         --live-location-glow: to_rgba('ac-1', 0.5) //#25d3664d;
         --live-location-glow-rgb: var(--ac-1-rgb) //37,211,102;
         --live-location-glow-stale: to_rgba('red', 0.5) //#ff001f4d;
-        --live-location-glow-stale-rgb: var(--red-rgb) //255,0,31;
+        --live-location-glow-stale-rgb: var(--b1-0-rgb) //255,0,31;
         --location-cluster-background: var(--bg-1) //#101d24;
         --location-cluster-background-rgb: var(--bg-1-rgb) //16,29,36;
         --media-editor-control: #1c313f;
@@ -590,16 +657,16 @@ OM = next_omsg
         --modal-backdrop-solid-rgb: var(--bg-0-rgb) //28,40,47;
         --modal-background: var(--bg-2) //#364147;
         --modal-background-rgb: var(--bg-2-rgb) //54,65,71;
-        --notification-biz-background: var(--bg-2) //#1c282f;
-        --notification-biz-background-rgb: var(--bg-2-rgb) //28,40,47;
-        --notification-biz-text: var(--cyan) //#55fad9;
-        --notification-biz-text-rgb: var(--cyan-rgb) //85,250,217;
-        --notification-e2e-background: var(--bg-2) //#1c282f;
-        --notification-e2e-background-rgb: var(--bg-2-rgb) //28,40,47;
-        --notification-e2e-icon: var(--orange) //#fad964;
-        --notification-e2e-icon-rgb: var(--orange-rgb) //250,217,100;
-        --notification-e2e-text: var(--orange) //#fad964;
-        --notification-e2e-text-rgb: var(--orange-rgb) //250,217,100;
+        --notification-biz-background: var(--b6-5) //#1c282f;
+        --notification-biz-background-rgb: var(--b6-5-rgb) //28,40,47;
+        --notification-biz-text: var(--b6-0) //#55fad9;
+        --notification-biz-text-rgb: var(--b6-0-rgb) //85,250,217;
+        --notification-e2e-background: var(--b3-5) //#1c282f;
+        --notification-e2e-background-rgb: var(--b3-5-rgb) //28,40,47;
+        --notification-e2e-icon: var(--b3-1) //#fad964;
+        --notification-e2e-icon-rgb: var(--b3-1-rgb) //250,217,100;
+        --notification-e2e-text: var(--b3-0) //#fad964;
+        --notification-e2e-text-rgb: var(--b3-0-rgb) //250,217,100;
         --notification-text: var(--fg-3) //#f1f1f266;
         --notification-text-rgb: var(--fg-3-rgb) //241,241,242;
         --outgoing-background: var(--msg-out-0) //#054740;
@@ -670,18 +737,18 @@ OM = next_omsg
         --progress-background-rgb: var(--bg-2-rgb) //41.6,47.46667,50.4;
         --progress-primary: var(--ac-0) //#0c897c;
         --progress-primary-rgb: var(--ac-0) //12,137,124;
-        --ptt-blue: var(--blue) //#4fc3f7;
-        --ptt-blue-rgb: var(--blue-rgb) //79,195,247;
-        --ptt-button-cancel: var(--red) //#e53935cc;
-        --ptt-button-cancel-rgb: var(--red-rgb) //229,57,53;
-        --ptt-button-send: var(--green) //#09d261cc;
-        --ptt-button-send-rgb: var(--green) //9,210,97;
+        --ptt-blue: var(--b4-0) //#4fc3f7;
+        --ptt-blue-rgb: var(--b4-0-rgb) //79,195,247;
+        --ptt-button-cancel: var(--b1-0) //#e53935cc;
+        --ptt-button-cancel-rgb: var(--b1-0-rgb) //229,57,53;
+        --ptt-button-send: var(--b2-0) //#09d261cc;
+        --ptt-button-send-rgb: var(--b2-0-rgb) //9,210,97;
         --ptt-gray: var(--fg-4) //#f1f1f266;
         --ptt-gray-rgb: var(--fg-4-rgb) //241,241,242;
-        --ptt-green: var(--green) //#09d261;
-        --ptt-green-rgb: var(--green) //9,210,97;
-        --ptt-message-blue: var(--blue) //#68bbe4;
-        --ptt-message-blue-rgb: var(--blue-rgb) //104,187,228;
+        --ptt-green: var(---b2-0) //#09d261;
+        --ptt-green-rgb: var(--b2-rgb) //9,210,97;
+        --ptt-message-blue: var(--b4-0) //#68bbe4;
+        --ptt-message-blue-rgb: var(--b4-0-rgb) //104,187,228;
         --quick-action-button: to_rgba('fg-3', 0.5) //#f1f1f280;
         --quick-action-button-rgb: var(--fg-3-rgb) //241,241,242;
         --quick-action-button-background: var(--bg-4) //#080e1299;
@@ -728,8 +795,8 @@ OM = next_omsg
         --success-rgb: var(--ac-0-rgb) //0,175,156;
         --suspicious-background: #ef697acc;
         --suspicious-background-rgb: 239,105,122;
-        --system-message-background: var(--ac-5) //#1e2a30;
-        --system-message-background-rgb: var(--ac-5-rgb) //30,42,48;
+        --system-message-background: var(--b4-4) //#1e2a30;
+        --system-message-background-rgb: var(--b4-4-rgb) //30,42,48;
         --system-message-text: to_rgba('fg-1', 0.87) //#f1f1f2de;
         --system-message-text-rgb: var(--fg-1-rgb) //241,241,242;
         --teal-hover: #00b7a1;
@@ -776,7 +843,7 @@ OM = next_omsg
         --win32-title-primary-rgb: 255,255,255;
 
         /// Generate DWA color variables.
-        for _v in (bg fg ac) {
+        for _v in (bg fg ac b1 b2 b3 b4 b5 b6) {
             for _i in 0..5 {
                 key = s('--%s-%s', _v, _i)
                 /// Escape `\` for `*-0` vars.
@@ -1308,6 +1375,9 @@ OM = next_omsg
             [fill = '#FFF'] { fill: white }
         }
 
+        /// Left -> Reset 'connecting' icon background. @upstream
+        &[data-icon] path[fill = '#FFBC00'] { fill: bg3 i }
+
         /// Chat -> Context menu arrows.
         &[data-icon = 'down-context'] { c: fg0 }
 
@@ -1383,13 +1453,13 @@ OM = next_omsg
 
         /// System messages.
         ._1E1g0 {
-            border: 1px solid to_rgba('fg-1', 0.3)
+            border: 1px solid var(--b4-3)
 
             /// Tweak text shadow.
             text-shadow: 0 1px 0 to_rgba('fg-1', 0.3)
 
             /// End-to-end encryption message.
-            &._2n04H { border: 1px solid to_rgba('notification-e2e-text', 0.3) }
+            &._2n04H { border: 1px solid var(--b3-4) }
 
             /// Bussiness account message.
             &._2nH_- { border: 1px solid to_rgba('notification-biz-text', 0.3) }
@@ -1553,50 +1623,51 @@ OM = next_omsg
 
         /// Feat -> Colors for replies and group members.
         .color {
-            &-0  { c: blue }
-            &-1  { c: cyan }
-            &-2  { c: green }
-            &-3  { c: violet }
-            &-4  { c: magenta }
-            &-5  { c: red }
-            &-6  { c: orange }
-            &-7  { c: yellow }
-            &-8  { c: blue; filter: hue-rotate(20deg) }
-            &-9  { c: cyan; filter: hue-rotate(20deg) }
-            &-10 { c: green; filter: hue-rotate(20deg) }
-            &-11 { c: violet; filter: hue-rotate(20deg) }
-            &-12 { c: magenta; filter: hue-rotate(20deg) }
-            &-13 { c: red; filter: hue-rotate(20deg) }
-            &-14 { c: orange; filter: hue-rotate(20deg) }
-            &-15 { c: blue; filter: hue-rotate(40deg) }
-            &-16 { c: cyan; filter: hue-rotate(40deg) }
-            &-17 { c: green; filter: hue-rotate(40deg) }
-            &-18 { c: violet; filter: hue-rotate(40deg) }
-            &-19 { c: magenta; filter: hue-rotate(40deg) }
-            &-20 { c: red; filter: hue-rotate(40deg) }
+            &-0  { c: b40 }
+            &-1  { c: b60 }
+            &-2  { c: b20 }
+            &-3  { c: b50 }
+            &-4  { c: b51 }
+            &-5  { c: b10 }
+            &-6  { c: b30 }
+            &-7  { c: b31 }
+            &-8  { c: b41 }
+            &-9  { c: b61 }
+            &-10 { c: b21 }
+            &-11 { c: b52 }
+            &-12 { c: b42 }
+            &-13 { c: b11 }
+            &-14 { c: b32 }
+            &-15 { c: b22 }
+            &-16 { c: b62 }
+            &-17 { c: b12 }
+            &-18 { c: ac0 }
+            &-19 { c: ac1 }
+            &-20 { c: ac2 }
         }
+
         .bg-color {
-            &-0  { c: 0 0 blue }
-            &-1  { c: 0 0 cyan }
-            &-2  { c: 0 0 green }
-            &-3  { c: 0 0 violet }
-            &-4  { c: 0 0 magenta }
-            &-5  { c: 0 0 red }
-            &-6  { c: 0 0 orange }
-            &-7  { c: 0 0 yellow }
-            &-8  { c: 0 0 blue; filter: hue-rotate(20deg) }
-            &-9  { c: 0 0 cyan; filter: hue-rotate(20deg) }
-            &-10 { c: 0 0 green; filter: hue-rotate(20deg) }
-            &-11 { c: 0 0 violet; filter: hue-rotate(20deg) }
-            &-12 { c: 0 0 magenta; filter: hue-rotate(20deg) }
-            &-13 { c: 0 0 red; filter: hue-rotate(20deg) }
-            &-14 { c: 0 0 orange; filter: hue-rotate(20deg) }
-            &-15 { c: 0 0 blue; filter: hue-rotate(40deg) }
-            &-16 { c: 0 0 cyan; filter: hue-rotate(40deg) }
-            &-17 { c: 0 0 green; filter: hue-rotate(40deg) }
-            &-18 { c: 0 0 violet; filter: hue-rotate(40deg) }
-            &-19 { c: 0 0 magenta; filter: hue-rotate(40deg) }
-            &-20 { c: 0 0 red; filter: hue-rotate(40deg) }
+            &-0  { c: 0 0 b40 }
+            &-1  { c: 0 0 b60 }
+            &-2  { c: 0 0 b20 }
+            &-3  { c: 0 0 b50 }
+            &-4  { c: 0 0 b51 }
+            &-5  { c: 0 0 b10 }
+            &-6  { c: 0 0 b30 }
+            &-7  { c: 0 0 b31 }
+            &-8  { c: 0 0 b41 }
+            &-9  { c: 0 0 b61 }
+            &-10 { c: 0 0 b21 }
+            &-11 { c: 0 0 b52 }
+            &-12 { c: 0 0 b42 }
+            &-13 { c: 0 0 b11 }
+            &-14 { c: 0 0 b32 }
+            &-15 { c: 0 0 b22 }
+            &-16 { c: 0 0 b62 }
+            &-17 { c: 0 0 b12 }
+            &-18 { c: 0 0 ac0 }
+            &-19 { c: 0 0 ac1 }
+            &-20 { c: 0 0 ac2 }
         }
     }
 
