--- a/wa.user.styl
+++ b/wa.user.styl
@@ -99,32 +99,16 @@
 @var text     chat_bg_p  'Chat background image position' top left
 @var text     chat_bg_r  'Chat background image repeat' repeat
 
-@var color    _dark      'Color: Primary background   ' #1f232a
-@var color    _darken    'Color: Highlight background ' #252A33
-@var color    darker     'Color: Secondary background ' #333943
-@var color    light      'Color: Primary foreground   ' #e9e9e9
-@var color    lighter    'Color: Secondary foreground ' #a1a1a1
-@var color    accent     'Color: Accent               ' #7289da
-@var color    yellow     'Color: Yellow               ' #e5c512
-@var color    orange     'Color: Orange               ' #df4b16
-@var color    red        'Color: Red                  ' #dc322f
-@var color    magenta    'Color: Magenta              ' #f33682
-@var color    violet     'Color: Violet               ' #6c71c4
-@var color    blue       'Color: Blue                 ' #268bd2
-@var color    cyan       'Color: Cyan                 ' #2aa198
-@var color    green      'Color: Green                ' #859900
-@var color    white      'Color: White                ' #ffffff
-@var color    sh         'Color: Shadow light         ' #00000025
-@var color    sh-h       'Color: Shadow heavy         ' #00000035
-
-@var color    _red       'Color: Red                  ' #dc322f
-@var color    _orange    'Color: Orange               ' #df4b16
-@var color    _yellow    'Color: Yellow               ' #e5c512
-@var color    _green     'Color: Green                ' #859900
-@var color    _cyan      'Color: Cyan                 ' #2aa198
-@var color    _blue      'Color: Blue                 ' #268bd2
-@var color    _magenta   'Color: Magenta              ' #f33682
-@var color    _violet    'Color: Violet               ' #6c71c4
+@var color    _red       'Base red color              ' #f07178
+@var color    _orange    'Base orange color           ' #f78c6c
+@var color    _yellow    'Base yellow color           ' #ffcb6b
+@var color    _green     'Base green color            ' #c3e88d
+@var color    _cyan      'Base cyan color             ' #89ddff
+@var color    _blue      'Base blue color             ' #82aaff
+@var color    _magenta   'Base magenta color          ' #c792ea
+@var color    _violet    'Base violet color           ' #9a91ea
+@var color    white      'White color                 ' #ffffff
+@var color    sh         'Shadow color                ' #00000025
 ==/UserStyle== */
 
 // Color mixin.
@@ -161,17 +145,33 @@ vendors = official
 
 /// Feat -> Base color-scheme toggle. #32
 if (theme == 'custom') {
-    BG = next_bg
-    FG = next_fg
-    AC = next_ac
+    BG       = next_bg
+    FG       = next_fg
+    AC       = next_ac
 } else if (theme == 'old') {
-    BG = #1f232a
-    FG = #eeeeee
-    AC = #7289da
+    BG       = #1f232a
+    FG       = #eeeeee
+    AC       = #7289da
+    _red     = #f07178
+    _orange  = #f78c6c
+    _yellow  = #ffcb6b
+    _green   = #c3e88d
+    _cyan    = #89ddff
+    _blue    = #82aaff
+    _magenta = #c792ea
+    _violet  = #9a91ea
 } else if (theme == 'new') {
-    BG = #292929
-    FG = #e6e6e6
-    AC = #d47d3f
+    BG       = #292929
+    FG       = #e6e6e6
+    AC       = #d47d3f
+    _red     = #f2777a
+    _orange  = #f99157
+    _yellow  = #ffcc66
+    _green   = #99cc99
+    _cyan    = #66cccc
+    _blue    = #6699cc
+    _magenta = #cc99cc
+    _violet  = #aa99cc
 }
 
 /// Helpers.
@@ -241,65 +241,65 @@ OM = next_omsg
             '1': darken(OM, og_quote),
         },
         b1: {
-            '0': mix(darken(BG,  0%), _red, 0%)
-            '1': mix(darken(BG, 20%), _red, s1)
-            '2': mix(darken(BG, 20%), _red, s2)
+            '0': spin(_red,  0deg - 0%)
+            '1': spin(_red, 15deg - s1)
+            '2': spin(_red, 30deg - s2)
             '3': mix(darken(BG, 20%), _red, s3)
             '4': mix(darken(BG, 40%), _red, s4)
             '5': mix(darken(BG, 40%), _red, s5)
         },
         b2: {
-            '0': mix(darken(BG,  0%), _orange, 0%)
-            '1': mix(darken(BG, 20%), _orange, s1)
-            '2': mix(darken(BG, 20%), _orange, s2)
+            '0': spin(_orange,  0deg - 0%)
+            '1': spin(_orange, 15deg - s1)
+            '2': spin(_orange, 30deg - s2)
             '3': mix(darken(BG, 20%), _orange, s3)
             '4': mix(darken(BG, 40%), _orange, s4)
             '5': mix(darken(BG, 40%), _orange, s5)
         },
         b3: {
-            '0': mix(darken(BG,  0%), _yellow, 0%)
-            '1': mix(darken(BG, 20%), _yellow, s1)
-            '2': mix(darken(BG, 20%), _yellow, s2)
+            '0': spin(_yellow,  0deg - 0%)
+            '1': spin(_yellow, 15deg - s1)
+            '2': spin(_yellow, 30deg - s2)
             '3': mix(darken(BG, 20%), _yellow, s3)
             '4': mix(darken(BG, 40%), _yellow, s4)
             '5': mix(darken(BG, 40%), _yellow, s5)
         },
         b4: {
-            '0': mix(darken(BG,  0%), _green, 0%)
-            '1': mix(darken(BG, 20%), _green, s1)
-            '2': mix(darken(BG, 20%), _green, s2)
+            '0': spin(_green,  0deg - 0%)
+            '1': spin(_green, 15deg - s1)
+            '2': spin(_green, 30deg - s2)
             '3': mix(darken(BG, 20%), _green, s3)
             '4': mix(darken(BG, 40%), _green, s4)
             '5': mix(darken(BG, 40%), _green, s5)
         },
         b5: {
-            '0': mix(darken(BG,  0%), _cyan, 0%)
-            '1': mix(darken(BG, 20%), _cyan, s1)
-            '2': mix(darken(BG, 20%), _cyan, s2)
+            '0': spin(_cyan,  0deg - 0%)
+            '1': spin(_cyan, 15deg - s1)
+            '2': spin(_cyan, 30deg - s2)
             '3': mix(darken(BG, 20%), _cyan, s3)
             '4': mix(darken(BG, 40%), _cyan, s4)
             '5': mix(darken(BG, 40%), _cyan, s5)
         },
         b6: {
-            '0': mix(darken(BG,  0%), _blue, 0%)
-            '1': mix(darken(BG, 20%), _blue, s1)
-            '2': mix(darken(BG, 20%), _blue, s2)
+            '0': spin(_blue,  0deg - 0%)
+            '1': spin(_blue, 15deg - s1)
+            '2': spin(_blue, 30deg - s2)
             '3': mix(darken(BG, 20%), _blue, s3)
             '4': mix(darken(BG, 40%), _blue, s4)
             '5': mix(darken(BG, 40%), _blue, s5)
         },
         b7: {
-            '0': mix(darken(BG,  0%), _magenta, 0%)
-            '1': mix(darken(BG, 20%), _magenta, s1)
-            '2': mix(darken(BG, 20%), _magenta, s2)
+            '0': spin(_magenta,  0deg - 0%)
+            '1': spin(_magenta, 15deg - s1)
+            '2': spin(_magenta, 30deg - s2)
             '3': mix(darken(BG, 20%), _magenta, s3)
             '4': mix(darken(BG, 40%), _magenta, s4)
             '5': mix(darken(BG, 40%), _magenta, s5)
         },
         b8: {
-            '0': mix(darken(BG,  0%), _violet, 0%)
-            '1': mix(darken(BG, 20%), _violet, s1)
-            '2': mix(darken(BG, 20%), _violet, s2)
+            '0': spin(_violet,  0deg - 0%)
+            '1': spin(_violet, 15deg - s1)
+            '2': spin(_violet, 30deg - s2)
             '3': mix(darken(BG, 20%), _violet, s3)
             '4': mix(darken(BG, 40%), _violet, s4)
             '5': mix(darken(BG, 40%), _violet, s5)
@@ -495,8 +495,8 @@ OM = next_omsg
         --butterbar-connection-primary-rgb: var(--fg-0-rgb) //28,40,47;
         --butterbar-connection-secondary: var(--fg-4) //#1c282fd9;
         --butterbar-connection-secondary-rgb: var(--fg-4-rgb) //28,40,47;
-        --butterbar-default-background: var(--b6-3) //#39c;
-        --butterbar-default-background-rgb: var(--b6-3) //51,153,204;
+        --butterbar-default-background: var(--b6-4) //#39c;
+        --butterbar-default-background-rgb: var(--b6-4) //51,153,204;
         --butterbar-icon: var(--b3-2) //#f1f1f2cc;
         --butterbar-icon-rgb: var(--b3-2-rgb) //241,241,242;
         --butterbar-notification-icon: var(--b6-0) //#8eb2be;
@@ -884,16 +884,6 @@ OM = next_omsg
         /// TODO: Improve secondary colors.
         --white:      white
         --white-rgb:  to_rgb(white)
-        --red:        red
-        --red-rgb:    to_rgb(red)
-        --green:      green
-        --green-rgb:  to_rgb(green)
-        --blue:       blue
-        --blue-rgb:   to_rgb(blue)
-        --yellow:     yellow
-        --yellow-rgb: to_rgb(yellow)
-        --cyan:       cyan
-        --cyan-rgb:   to_rgb(cyan)
         --t:          transparent
         --shadow:     sh
         --bshadow:    0 2px 4px var(--shadow)
