chat: fix color for compact mode typing indicator

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1795,7 +1795,7 @@ OM = next_omsg
                             height: 53px i
                             width: 53px i
                             rad: var(--r-avatars) i
-                            box-shadow: inset 0 0 0 3px green i
+                            box-shadow: inset 0 0 0 3px b40 i
                             animation: 2s pulse infinite i
 
                             /// Fix RTL layout.
