--- a/wa.user.styl
+++ b/wa.user.styl
@@ -775,7 +775,7 @@ OM = next_omsg
         --ptt-button-send-rgb: var(--b4-0-rgb) //9,210,97;
         --ptt-gray: var(--fg-4) //#f1f1f266;
         --ptt-gray-rgb: var(--fg-4-rgb) //241,241,242;
-        --ptt-green: var(---b4-0) //#09d261;
+        --ptt-green: var(--b4-0) //#09d261;
         --ptt-green-rgb: var(--b4-rgb) //9,210,97;
         --ptt-message-blue: var(--b6-0) //#68bbe4;
         --ptt-message-blue-rgb: var(--b6-0-rgb) //104,187,228;
@@ -1026,10 +1026,10 @@ OM = next_omsg
         /\*{
             /// Scrollbar colors.
             @supports (scrollbar-width: thin) {
-                scrollbar-color: ac3 var(--shadow) i
+                scrollbar-color: ac2 var(--shadow) i
             }
             &::-webkit-scrollbar {
-                &-thumb { c: 0 0 ac-3 i }
+                &-thumb { c: 0 0 ac2 i }
                 &-track { c: 0 0 var(--shadow) i }
             }
         }
